--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="topnav">
-        <a href="Home.html">Home</a>
+        <a href="index.html">Home</a>
       
         <a href="blog.html">Blog</a>
         <a href="contact_us.html">Contact us</a>
@@ -73,7 +73,7 @@
                 <div class="column link">
                   <h3>Links</h3>
                   <ul>
-                    <li><a href="Home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact_us.html">Contact us</a></li>
                     <li><a href="about.html">About</a></li>
