change done by vikash in line no 33

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <div class="explain">
       
         <h1>What Is Food Waste and Why It Matters</h1>
+        <p>This is just a demo text</p>
         <p>
             Food waste is a major problem worldwide, with an estimated one-third of all food produced for human consumption
              ending up in the garbage. This issue is not only ethically problematic, as it is occurring in a world where
