change done by vikash in line no 33

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
              ending up in the garbage. This issue is not only ethically problematic, as it is occurring in a world where
              millions of people are suffering from food insecurity, but it also has significant environmental and
              economic consequences.
-        </p>
+        </p>git
         <p>Food waste has significant environmental and economic consequences. It contributes to the depletion of natural
              resources, releases methane, a potent greenhouse gas, and represents a significant loss of money for businesses
               and households. The cost of producing, transporting, and storing food that ends up in the garbage is estimated
